@@ -5,6 +5,10 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2024/02/27:
+- TestEngine: Added ImGuiTestOpFlags_NoYield support to MouseTeleportToPos(), useful in
+  situations where very precise timings are required (e.g. successive frames teleports).
+
 2024/02/26:
 - TestEngine: *BREAKING* fixed GetWindowByRef() behaving inconsistently by ignoring
   current SetRef() base reference when non-empty. Most functions expected on windows
